# Tool_Calling_with_Transformers_and_MoEs

./: README.md  distill.py  distill_fail.py  distill_fail2.py  distill_llama.py  eval_bfcl.py  eval_openorca.py  eval_results_bfcl_Llama-3.2-1B-Instruct_mps_20250518_211348.txt  eval_results_bfcl_Llama-3.2-3B-Instruct_mps_20250518_212134.txt  eval_results_openorca_Llama-3.2-1B-Instruct_mps_20250518_212104.txt  eval_results_openorca_Llama-3.2-3B-Instruct_mps_20250518_211418.txt  function_calling.py  inference.py  main.py  model.py  pyproject.toml  test.py  test2.py
