[project]
name = "tool-calling-with-transformers-and-moes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "rouge-score>=0.1.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.40.0",
]
